When tables overflow, content is no longer exposed without a border.

--- a/styles/article/_table.scss
+++ b/styles/article/_table.scss
@@ -3,6 +3,9 @@
 .flexi-table-block {
     width: 100%;
     overflow: auto;
+    border: 1px solid #ddd;
+    border-top: none;
+    border-bottom: none;
 
     table {
         @media #{$media-medium}, #{$media-wide} {
@@ -22,6 +25,14 @@
 
                 &.align-right {
                     text-align: right;
+                }
+
+                &:last-child {
+                    border-right: none;
+                }
+
+                &:first-child {
+                    border-left: none;
                 }
             }
 
@@ -63,17 +74,22 @@
             td {
                 display: table-row;
 
-                &:before {
-                    content: attr(data-label);
-                    font-weight: 600;
-                    text-align: left;
-                }
-
                 &:before, > div {
                     vertical-align: middle;
                     padding: 7px 14px;
                     display: table-cell;
                     border: 1px solid $color-divider-background;
+                }
+
+                &:before {
+                    content: attr(data-label);
+                    font-weight: 600;
+                    text-align: left;
+                    border-left: none;
+                }
+
+                > span {
+                    border-right: none;
                 }
 
                 &.align-left {
